# python

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mosvera/: __init__.py  compile.py  errors.py  merge.py  pack.py  parser.py  project.py  registry.py  resolve.py  strategies.py  tokens.py  types.py  validator.py
tests/: test_conformance.py  test_merge_registry.py  test_pack.py  test_parser_validator.py  test_resolution_tokens_project.py  test_smoke.py
