[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mosvera"
version = "0.1.2"
description = "Python runtime for Mosvera: load aesthetic registries, resolve named compositions, compile neutral tokens, validate schemas, and apply merge/compile semantics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mosvera contributors" }]
keywords = ["mosvera", "aesthetic-infrastructure", "ai", "runtime", "json-schema"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "jsonschema>=4.22",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://mosvera.io"
Repository = "https://github.com/mosvera/python"
Issues = "https://github.com/mosvera/python/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.8",
  "types-jsonschema>=4.24",
  "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/src/mosvera",
  "/schemas",
]
exclude = [
  "/tests",
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mosvera"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
packages = ["mosvera"]
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
